# Math-Word-Problems

./: QUESTIONS.md  README.md  generate_questions.py  pyproject.toml
.github/workflows/: ci.yml
math_word_problems/: __init__.py  agent.py  benchmarks.py  operations.py  problems.py
tests/: test_solver.py
